fix input is too long in width in IE

--- a/jquery.searchableSelectFuzzy.css
+++ b/jquery.searchableSelectFuzzy.css
@@ -1,5 +1,5 @@
 .searchable-select {
-  min-width: 224px;
+  width: 224px;
   font-size: 11px;
   outline: none;
 }
@@ -24,6 +24,7 @@
   border: 2px solid rgb(153,190,218);
   background: rgb(242,248,252);
   font-family: sans-serif;
+  width: 224px;
 }
 
 /*remove x in input in IE*/
